deploy/k8s/central-kms-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: central-kms
  labels:
    app: central-kms
spec:
  ports:
    - port: 80
      targetPort: 8080
      name: http-api-and-tcp-websocket
      protocol: TCP
  selector:
    app: central-kms
